Script changes for jdk 17 and scripts for zookeeper added